--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "web-prog-site"
+name = "justpost"
 version = "0.1.0"
-description = "Add your description here"
+description = "Educational project"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
